# DiscountCart

./: .env.example  .gitignore  README.md  debug.py  debug_price.py  price_monitor.py  pyproject.toml  requirements.txt  scheduler.py  schema.sql
config/: settings.py
database/: __init__.py  connection.py  models.py
migrations/: 001_add_store_column.sql  002_add_category_column.sql
scraper/: __init__.py  amazon_scraper.py  carrefour_scraper.py  zaffari_scraper.py
services/: __init__.py  alert_service.py  category_service.py  product_service.py
utils/: __init__.py  helpers.py
